--- a/box_bringup/box_launch/package.xml
+++ b/box_bringup/box_launch/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="jonfrey@ethz.ch">Vassilios Tsounis</maintainer>
   <author email="jonfrey@ethz.ch">Vassilios Tsounis</author>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>usb_cam</exec_depend>
-  <exec_depend>livox_ros_driver2</exec_depend>
+  <depend>bringup_alphasense</depend>
+  <depend>bringup_hdr</depend>
+  <depend>bringup_hesai</depend>
+  <depend>bringup_livox</depend>
 </package>
