--- a/box_bringup/bringup_hdr/usb_cam/package.xml
+++ b/box_bringup/bringup_hdr/usb_cam/package.xml
@@ -6,6 +6,7 @@
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>usb_cam</depend>
   <export>
   </export>
 </package>
