--- a/box_bringup/bringup_hesai/package.xml
+++ b/box_bringup/bringup_hesai/package.xml
@@ -6,6 +6,7 @@
   <maintainer email="bkrumme@ethz.ch">Benjamin krummenacher</maintainer>
   <license>Proprietary</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>hesai_lidar</depend>
   <export>
   </export>
 </package>
