--- a/box_bringup/bringup_livox/package.xml
+++ b/box_bringup/bringup_livox/package.xml
@@ -6,6 +6,8 @@
   <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>livox_sdk</depend>
+  <depend>livox_ros_driver2</depend>
   <export>
   </export>
 </package>
