--- a/box_model/box_model/package.xml
+++ b/box_model/box_model/package.xml
@@ -3,9 +3,17 @@
   <name>box_model</name>
   <version>0.0.0</version>
   <description>The box_model package</description>
-  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
-  <license>MIT</license>
+
+  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
+
+  <license>Proprietary</license>
+
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>xacro</depend>
+
+  <!-- The export tag contains other, unspecified, tags -->
   <export>
+    <!-- Other tools can request additional information be placed here -->
+
   </export>
 </package>
