--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule "box_drivers/HesaiLidar_General_ROS"]
 	path = box_drivers/HesaiLidar_General_ROS
 	url = git@github.com:HesaiTechnology/HesaiLidar_General_ROS.git
+	ignore = dirty
 [submodule "box_drivers/smb_imu_interface"]
 	path = box_drivers/smb_imu_interface
 	url = git@github.com:ETHZ-RobotX/smb_imu_interface.git
