--- a/box_bringup/box_launch/package.xml
+++ b/box_bringup/box_launch/package.xml
@@ -11,4 +11,5 @@
   <depend>bringup_hdr</depend>
   <depend>bringup_hesai</depend>
   <depend>bringup_livox</depend>
+  <depend>fkie_multimaster</depend>
 </package>
