--- a/box_bringup/box_launch/tmux/box_replay.yaml
+++ b/box_bringup/box_launch/tmux/box_replay.yaml
@@ -11,13 +11,22 @@ windows:
   options:
     pane-border-status: top
   panes:
-    - roslaunch box_launch fkie.launch
-        autostart_launch_files:="
-          $(rospack find box_launch)/launch/alphasense.launch
-          $(rospack find box_launch)/launch/usb_cam.launch
-          "
-        load_launch_files:=""
     - shell_command:
+      - source /opt/ros/noetic/setup.bash
+      - source ~/catkin_ws/devel/setup.bash
+      - roslaunch box_launch fkie.launch
+          autostart_launch_files:="
+            $(rospack find box_launch)/launch/alphasense.launch
+            $(rospack find box_launch)/launch/usb_cam.launch
+            "
+          load_launch_files:="
+            $(rospack find box_launch)/launch/alphasense.launch
+            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_launch)/launch/hesai_lidar.launch
+            "
+    - shell_command:
+      - source /opt/ros/noetic/setup.bash
+      - source ~/catkin_ws/devel/setup.bash
       - df -h $HOME
       focus: true
   
