--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -1,7 +1,7 @@
-jetson:
+gt_box_jetson:
   - /usb_cam/image
   - /usb_cam/camera_info
 
-nuc:
+gt_box_nuc:
   - /usb_cam/image
   - /usb_cam/camera_info
