--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -16,10 +16,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_launch)/launch/usb_cam.launch
-            "
-          load_launch_files:="
-            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_launch)/launch/adis16475.launch
             "
           use_gui:=false
     - shell_command:
