--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -17,9 +17,9 @@ windows:
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
             $(rospack find box_launch)/launch/alphasense.launch
-            $(rospack find box_launch)/launch/gps.launch
+            $(rospack find box_launch)/launch/gps_rover.launch
             $(rospack find box_launch)/launch/hesai_lidar.launch
-            $(rospack find box_launch)/launch/livox.launch
+            $(rospack find box_launch)/launch/livox_lidar.launch
             "
           use_gui:=false
           is_rosmaster:=true
