--- a/box_bringup/box_launch/tmux/box_opc.yaml
+++ b/box_bringup/box_launch/tmux/box_opc.yaml
@@ -16,10 +16,10 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_rviz_plugins)/launch/box_rviz_plugins.launch
             "
           load_launch_files:="
-            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_rviz_plugins)/launch/box_rviz_plugins.launch
             "
     - shell_command:
       - source /opt/ros/noetic/setup.bash
