--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -20,6 +20,8 @@ windows:
             $(rospack find box_launch)/launch/gps_rover.launch
             $(rospack find box_launch)/launch/hesai_lidar.launch
             $(rospack find box_launch)/launch/livox_lidar.launch
+            $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
+            $(rospack find box_recording)/launch/rosbag_record_node.launch
             "
           use_gui:=false
           is_rosmaster:=true
