--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -17,6 +17,8 @@ windows:
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
             $(rospack find box_launch)/launch/adis16475.launch
+            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_recording)/launch/rosbag_record_node.launch
             "
           use_gui:=false
     - shell_command:
