--- a/box_utils/box_rviz_plugins/package.xml
+++ b/box_utils/box_rviz_plugins/package.xml
@@ -5,7 +5,7 @@
   <description>Box rviz plugins</description>
   <license>Proprietary</license>
   <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
-  <author email="schmiroby@ethz.ch">Robin Schmid</author>
+  <author email="schmirob@ethz.ch">Robin Schmid</author>
   <buildtool_depend>catkin</buildtool_depend>
 
 </package>
