--- a/box_model/box_model/package.xml
+++ b/box_model/box_model/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The box_model package</description>
 
-  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
+  <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
 
   <license>Proprietary</license>
 
