--- a/box_utils/box_rviz/package.xml
+++ b/box_utils/box_rviz/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>box_rviz_plugins</name>
+  <name>box_rviz</name>
   <version>1.0.0</version>
-  <description>Box rviz plugins</description>
+  <description>Box rviz</description>
   <license>Proprietary</license>
   <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
   <author email="schmirob@ethz.ch">Robin Schmid</author>
