Cleanup, remove box_rviz old pkg

--- a/box_bringup/box_launch/tmux/box_opc.yaml
+++ b/box_bringup/box_launch/tmux/box_opc.yaml
@@ -16,7 +16,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_rqt)/launch/box_rqt.launch
+            $(rospack find box_rviz)/launch/box_rviz.launch
             "
     - shell_command:
       - source /opt/ros/noetic/setup.bash
