--- a/box_bringup/box_launch/tmux/box_opc.yaml
+++ b/box_bringup/box_launch/tmux/box_opc.yaml
@@ -21,5 +21,6 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
+      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
       - df -h $HOME
       focus: true
