--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -20,6 +20,7 @@ windows:
             $(rospack find box_launch)/launch/adis16475.launch
             $(rospack find box_launch)/launch/usb_cam.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
+            $(rospack find box_health)/launch/publish_sensor_freq.launch
             "
           use_gui:=false
     - shell_command:
