--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -24,7 +24,7 @@ windows:
             $(rospack find box_model)/launch/box_model.launch
             $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
-            $(rospack find box_health)/launch/publish_sensor_freq.launch
+            $(rospack find box_health)/launch/box_health.launch
             "
           use_gui:=true
           is_rosmaster:=false
