use fkie gui only on opc

--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -26,7 +26,7 @@ windows:
             $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health.launch
             "
-          use_gui:=true
+          use_gui:=false
           is_rosmaster:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
