--- a/box_bringup/box_launch/tmux/box_opc.yaml
+++ b/box_bringup/box_launch/tmux/box_opc.yaml
@@ -6,7 +6,7 @@ windows:
 - window_name: grand_tour_box_robot
   layout: tiled
   shell_command_before:
-    - export HELLO=3
+    - export HOSTNAME
 
   options:
     pane-border-status: top
