--- a/box_configuration/jetson/phc2sys_mgbe0.service
+++ b/box_configuration/jetson/phc2sys_mgbe0.service
@@ -1,15 +1,12 @@
 [Unit]
 Description=Synchronize system clock or PTP hardware clock (PHC)
 Documentation=man:phc2sys
-After=ntpdate.service
 Requires=ptp4l_mgbe0.service
 After=ptp4l_mgbe0.service
-Requires=time-sync.target
-After=time-sync.target
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/phc2sys -w -s CLOCK_REALTIME -c mgbe0 
+ExecStart=/usr/sbin/phc2sys -w -s mgbe0 -c CLOCK_REALTIME
 
 [Install]
 WantedBy=multi-user.target
