--- a/box_configuration/nuc/autostart_tmux.service
+++ b/box_configuration/nuc/autostart_tmux.service
@@ -4,6 +4,7 @@ After=network.target
 After=phc2sys_system.service
 [Service]
 Type=forking
+ExecStartPre=/bin/sleep 30
 ExecStart=/usr/bin/tmuxp load /home/rsl/catkin_ws/src/grand_tour_box/box_bringup/box_launch/tmux/box_nuc.yaml -d
 User=rsl
 
