add GPS topics to recording config

--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -10,6 +10,13 @@ jetson:
   - /gt_box/hesai/pandar_packets
   - /gt_box/livox/imu
   - /gt_box/livox/lidar
+  - /gt_box/ros/vel_ned
+  - /gt_box/ros/vel_ned_cov
+  - /gt_box/ros/pos_enu
+  - /gt_box/ros/pos_enu_cov
+  - /gt_box/ros/navsatfix
+  - /gt_box/ros/receiver_state
+  - /gt_box/sbp/base_pos_ecef
 nuc:
   - /gt_box/adis16475
   - /gt_box/usb_cam/camera_info
