--- a/box_bringup/box_launch/tmux/box_opc.yaml
+++ b/box_bringup/box_launch/tmux/box_opc.yaml
@@ -20,7 +20,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_rviz)/launch/box_rviz.launch
+            $(rospack find box_launch)/launch/box_rviz.launch
             "
           use_gui:=true
     - shell_command:
