--- a/box_configuration/jetson/autostart_tmux.service
+++ b/box_configuration/jetson/autostart_tmux.service
@@ -6,6 +6,7 @@ After=phc2sys_mgbe1.service
 
 [Service]
 Type=forking
+ExecStartPre=/bin/sleep 30
 ExecStart=/usr/bin/tmuxp load /home/rsl/catkin_ws/src/grand_tour_box/box_bringup/box_launch/tmux/box_jetson.yaml -d
 User=rsl
 
