--- a/box_configuration/jetson/sync_time_once.service
+++ b/box_configuration/jetson/sync_time_once.service
@@ -1,9 +1,11 @@
 [Unit]
 Description= Get time from internet
 After=network-online.target
+After=time-sync.target
 
 [Service]
 Type=oneshot
 ExecStart=/usr/sbin/hwclock -s
+
 [Install]
 WantedBy=multi-user.target
