after network-online.target instead of network.target

--- a/box_configuration/jetson/autostart_tmux.service
+++ b/box_configuration/jetson/autostart_tmux.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Autostart Terminal and Run tmuxp
-After=network.target
+After=network-online.target
 After=phc2sys_mgbe0.service
 After=phc2sys_mgbe1.service
 
@@ -11,4 +11,4 @@ ExecStart=/usr/bin/tmuxp load /home/rsl/catkin_ws/src/grand_tour_box/box_bringup
 User=rsl
 
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
