--- a/box_configuration/jetson/ptp4l_mgbe1.service
+++ b/box_configuration/jetson/ptp4l_mgbe1.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Precision Time Protocol (PTP) service
 Documentation=man:ptp4l
-After=network.target
+After=network-online.target
 After=sync_time_once.service
 Requires=sync_time_once.service
 
