--- a/box_configuration/nuc/ptp4l_enp45s0.service
+++ b/box_configuration/nuc/ptp4l_enp45s0.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Precision Time Protocol (PTP) service
 Documentation=man:ptp4l
-After=network.target
+After=network-online.target
 
 [Service]
 Type=simple
