--- a/box_utils/box_health/package.xml
+++ b/box_utils/box_health/package.xml
@@ -7,5 +7,7 @@
   <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
   <author email="schmirob@ethz.ch">Robin Schmid</author>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 </package>
