--- a/box_utils/box_health/cfg/health_check_topics.yaml
+++ b/box_utils/box_health/cfg/health_check_topics.yaml
@@ -6,6 +6,7 @@ jetson:
   - /gt_box/livox/lidar
   - /gt_box/livox/imu
   - /gt_box/alphasense_driver_node/imu
+  - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu
 nuc:
   - /gt_box/adis16475
   - /gt_box/usb_cam/image
