--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "box_drivers/adis16475_ros"]
 	path = box_drivers/adis16475_ros
 	url = git@github.com:leggedrobotics/adis16475_ros.git
+[submodule "box_drivers/ros2_v4l2_camera"]
+	path = box_drivers/ros2_v4l2_camera
+	url = git@github.com:tier4/ros2_v4l2_camera.git
