--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -20,6 +20,5 @@ jetson:
   - /gt_box/rover/piksi/position_receiver_0/ros/time_ref
 nuc:
   - /gt_box/adis16475
-  - /gt_box/usb_cam/camera_info
-  - /gt_box/usb_cam/image
-  - /gt_box/usb_cam/image/compressedDepth
+  - /gt_box/camera_info
+  - /gt_box/image_raw
