--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -18,7 +18,9 @@ jetson:
   - /gt_box/rover/piksi/position_receiver_0/ros/receiver_state
   - /gt_box/rover/piksi/position_receiver_0/sbp/base_pos_ecef
   - /gt_box/rover/piksi/position_receiver_0/ros/time_ref
+  - /gt_box/health_status/jetson
 nuc:
   - /gt_box/adis16475
   - /gt_box/camera_info
   - /gt_box/image_raw
+  - /gt_box/health_status/nuc
