--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -26,6 +26,7 @@ windows:
             $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health_client.launch
+            $(rospack find core_throttling)/launch/throttle_jetson.launch
             "
           use_gui:=true
     - shell_command:
