--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -23,6 +23,7 @@ windows:
             $(rospack find box_launch)/launch/usb_cam.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health_client.launch
+            $(rospack find core_throttling)/launch/throttle_nuc.launch
             "
           use_gui:=false
     - shell_command:
