--- a/box_utils/box_rviz/package.xml
+++ b/box_utils/box_rviz/package.xml
@@ -8,5 +8,6 @@
   <author email="schmirob@ethz.ch">Robin Schmid</author>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rqt_rviz_wrapper</depend>
+  <depend>core_throttling</depend>
 
 </package>
