--- a/box_utils/box_health/cfg/health_check_topics.yaml
+++ b/box_utils/box_health/cfg/health_check_topics.yaml
@@ -3,7 +3,7 @@ jetson:
   - /gt_box/alphasense_driver_node/cam3
   - /gt_box/alphasense_driver_node/cam4
   - /gt_box/alphasense_driver_node/cam5
-  - /gt_box/hesai/pandar
+  - /gt_box/hesai/pandar_packets
   - /gt_box/livox/lidar
   - /gt_box/livox/imu
   - /gt_box/alphasense_driver_node/imu
