add stim320 imu to jetson yaml

--- a/box_bringup/box_launch/tmux/box_jetson.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson.yaml
@@ -23,6 +23,7 @@ windows:
             $(rospack find box_launch)/launch/gps_rover.launch
             $(rospack find box_launch)/launch/hesai_lidar.launch
             $(rospack find box_launch)/launch/livox_lidar.launch
+            $(rospack find box_launch)/launch/stim320.launch
             $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health_client.launch
