--- a/box_bringup/bringup_alphasense/core_research/config/ncamera_settings.yaml
+++ b/box_bringup/bringup_alphasense/core_research/config/ncamera_settings.yaml
@@ -22,30 +22,6 @@ camera_config: &standard_camera_config
   # Extra configuration.
   rotate_image: false               # true/false
 
-camera_config: &rotated_camera_config
-  # Exposure control.
-  manual_exp_time_us: 10000         # 10 - 65000
-  auto_exposure_enabled: true       # true/false
-  min_exp_time_us: 50               # 10 - 65000
-  max_exp_time_us: 10000            # 10 - 65000
-  autoexp_speed: 10                 # 1 - 10
-  autoexp_target_median: 70         # 0 - 255
-
-  # Gain control.
-  auto_gain_enabled: false          # true/false
-  autoexp_max_gain : 255            # 0 - 255
-  manual_gain: 1                    # 0 - 255
-
-  # Auto exposure ROI control.
-  auto_exposure_roi_enabled: false  # true/false
-  autoexp_start_row: 0              # 0 - 539/1079
-  autoexp_end_row: -1               # -1 - 539/1079
-  autoexp_start_col: 0              # 0 - 719/1439
-  autoexp_end_col: -1               # -1 - 719/1439
-
-  # Extra configuration.
-  rotate_image: true               # true/false
-
 camera_config: &camera_1_config
   # Exposure control.
   manual_exp_time_us: 10000         # 10 - 65000
@@ -68,7 +44,7 @@ camera_config: &camera_1_config
   autoexp_end_col: -1               # -1 - 719/1439
 
   # Extra configuration.
-  rotate_image: true               # true/false
+  rotate_image: false               # true/false
 
   # Force exposure parameters of stereo-pairs to be equal.
   autoexp_master_camera_index: 0
@@ -92,9 +68,9 @@ ncamera:
   num_cams: 6                       # 1 - 8
   cams:
     0: *standard_camera_config      # Front left, used for stereo
-    1: *camera_1_config             # Front right, usef for stereo
+    1: *camera_1_config             # Front right, used for stereo
     2: *standard_camera_config      # No camera
-    3: *rotated_camera_config       # Side left
-    4: *rotated_camera_config       # Front middle
+    3: *standard_camera_config       # Side left
+    4: *standard_camera_config       # Front middle
     5: *standard_camera_config      # Side right
 #    6: *standard_camera_config      # Back
