--- a/box_bringup/box_launch/tmux/box_nuc_calibration.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc_calibration.yaml
@@ -21,6 +21,7 @@ windows:
           autostart_launch_files:="
             $(rospack find box_launch)/launch/adis16475.launch
             $(rospack find box_launch)/launch/usb_cam_calibration.launch
+            $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health_client.launch
             $(rospack find core_throttling)/launch/throttle_nuc.launch
             "
