--- a/box_bringup/box_launch/tmux/box_jetson_calibration.yaml
+++ b/box_bringup/box_launch/tmux/box_jetson_calibration.yaml
@@ -20,7 +20,7 @@ windows:
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
             $(rospack find box_launch)/launch/alphasense_calibration.launch
-            $(rospack find box_launch)/launch/hesai_lidar.launch
+            $(rospack find box_launch)/launch/hesai_lidar_calibration.launch
             $(rospack find box_launch)/launch/livox_lidar.launch
             $(rospack find box_launch)/launch/stim320.launch
             $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
