--- a/box_bringup/box_launch/tmux/box_replay.yaml
+++ b/box_bringup/box_launch/tmux/box_replay.yaml
@@ -16,11 +16,10 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch box_launch box_rviz.launch replay:=true
+      - roslaunch box_launch replay.launch
 
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
-      - df -h $HOME
       focus: true
