--- a/box_bringup/box_launch/tmux/box_replay.yaml
+++ b/box_bringup/box_launch/tmux/box_replay.yaml
@@ -22,4 +22,10 @@ windows:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
+      - echo "rosbag play --clock some_file.bag]"
       focus: true
+
+    - shell_command:
+      - source /opt/ros/noetic/setup.bash
+      - source ~/catkin_ws/devel/setup.bash
+      - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
