--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -1,29 +1,43 @@
 jetson:
-  - /gt_box/alphasense_driver_node/aux_imu
-  - /gt_box/alphasense_driver_node/cam0/compressed
-  - /gt_box/alphasense_driver_node/cam1/compressed
-  - /gt_box/alphasense_driver_node/cam3/compressed
-  - /gt_box/alphasense_driver_node/cam4/compressed
-  - /gt_box/alphasense_driver_node/cam5/compressed
-  - /gt_box/alphasense_driver_node/imu
-  - /gt_box/hesai/pandar_packets
-  - /gt_box/livox/imu
-  - /gt_box/livox/lidar
-  - /gt_box/rover/piksi/position_receiver_0/ros/vel_ned
-  - /gt_box/rover/piksi/position_receiver_0/ros/vel_ned_cov
-  - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu
-  - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu_cov
-  - /gt_box/rover/piksi/position_receiver_0/ros/navsatfix
-  - /gt_box/rover/piksi/position_receiver_0/ros/receiver_state
-  - /gt_box/rover/piksi/position_receiver_0/sbp/base_pos_ecef
-  - /gt_box/rover/piksi/position_receiver_0/ros/time_ref
-  - /gt_box/health_status/jetson
+  alphasense:
+    - /gt_box/alphasense_driver_node/cam0/compressed
+    - /gt_box/alphasense_driver_node/cam1/compressed
+    - /gt_box/alphasense_driver_node/cam3/compressed
+    - /gt_box/alphasense_driver_node/cam4/compressed
+    - /gt_box/alphasense_driver_node/cam5/compressed
+  hesai:
+    - /gt_box/hesai/pandar_packets
+  livox:
+    - /gt_box/livox/imu
+    - /gt_box/livox/lidar
+  utils:
+    - /gt_box/alphasense_driver_node/aux_imu
+    - /gt_box/alphasense_driver_node/imu
+    - /gt_box/health_status/jetson
+  gps:
+    - /gt_box/rover/piksi/position_receiver_0/ros/vel_ned
+    - /gt_box/rover/piksi/position_receiver_0/ros/vel_ned_cov
+    - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu
+    - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu_cov
+    - /gt_box/rover/piksi/position_receiver_0/ros/navsatfix
+    - /gt_box/rover/piksi/position_receiver_0/ros/receiver_state
+    - /gt_box/rover/piksi/position_receiver_0/sbp/base_pos_ecef
+    - /gt_box/rover/piksi/position_receiver_0/ros/time_ref
+  tf:
+    - /tf_static
+    - /tf
 nuc:
-  - /gt_box/adis16475
-  - /gt_box/camera_info
-  - /gt_box/image_raw/compressed
-  - /gt_box/health_status/nuc
+  utils:
+    - /gt_box/stim320
+    - /gt_box/adis16475
+    - /gt_box/livox/imu
+    - /gt_box/health_status/nuc
+  hdr:
+    - /gt_box/camera_info
+    - /gt_box/image_raw/compressed
+
 opc:
-  - /gt_box/leica/position
-  - /gt_box/leica/status
-  - /gt_box/leica/timestamp_info
+  leica:
+    - /gt_box/leica/position
+    - /gt_box/leica/status
+    - /gt_box/leica/timestamp_info
