multiple hdr cams, publish also compressed

--- a/box_bringup/box_launch/package.xml
+++ b/box_bringup/box_launch/package.xml
@@ -26,4 +26,5 @@
   <depend>box_rviz</depend>
   <depend>box_health</depend>
   <depend>box_model</depend>
+  <depend>core_throttling</depend>
 </package>
