--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -20,7 +20,7 @@ windows:
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
             $(rospack find box_launch)/launch/adis16475.launch
-            $(rospack find box_launch)/launch/usb_cam.launch
+            $(rospack find box_launch)/launch/usb_cams.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find box_health)/launch/box_health_client.launch
             $(rospack find core_throttling)/launch/throttle_nuc.launch
