--- a/box_utils/box_health/cfg/health_check_topics.yaml
+++ b/box_utils/box_health/cfg/health_check_topics.yaml
@@ -10,4 +10,6 @@ jetson:
   - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu
 nuc:
   - /gt_box/adis16475
-  - /gt_box/image_raw
+  - /gt_box/left/image_raw
+  - /gt_box/middle/image_raw
+  - /gt_box/right/image_raw
