--- a/box_utils/box_recording/cfg/box_uncompressed.yaml
+++ b/box_utils/box_recording/cfg/box_uncompressed.yaml
@@ -33,8 +33,12 @@ nuc:
     - /gt_box/livox/imu
     - /gt_box/health_status/nuc
   hdr:
-    - /gt_box/camera_info
-    - /gt_box/image_raw
+    - /gt_box/left/v4l2_camera/camera_info
+    - /gt_box/left/v4l2_camera/image_raw
+    - /gt_box/middle/v4l2_camera/camera_info
+    - /gt_box/middle/v4l2_camera/image_raw
+    - /gt_box/right/v4l2_camera/camera_info
+    - /gt_box/right/v4l2_camera/image_raw
 
 opc:
   leica:
