--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -40,6 +40,8 @@ nuc:
     - /gt_box/right/v4l2_camera/camera_info
     - /gt_box/right/v4l2_camera/image_raw/compressed
 opc:
+  utils:
+    - /gt_box/health_status/opc
   leica:
     - /gt_box/leica/position
     - /gt_box/leica/status
