--- a/box_bringup/box_launch/tmux/box_opc_calib_lidar.yaml
+++ b/box_bringup/box_launch/tmux/box_opc_calib_lidar.yaml
@@ -1,4 +1,4 @@
-session_name: box_replay
+session_name: box_opc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,6 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
+    - export ROS_MASTER_URI=http://192.168.2.151:11311
+    - export ROS_IP=192.168.2.151
 
 
   options:
@@ -16,10 +18,14 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch box_launch replay.launch
-
+      - roslaunch box_launch fkie.launch
+          autostart_launch_files:="
+            $(rospack find box_launch)/multi_launch/opc_calib_lidar.launch
+            "
+          use_gui:=true
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_utils/box_setup/alias/alias.sh 
+      - df -h $HOME
       focus: true
