--- a/box_utils/box_recording/cfg/box_uncompressed.yaml
+++ b/box_utils/box_recording/cfg/box_uncompressed.yaml
@@ -41,6 +41,8 @@ nuc:
     - /gt_box/v4l2_camera_right/image_raw
 
 opc:
+  utils:
+    - /gt_box/health_status/opc
   leica:
     - /gt_box/leica/position
     - /gt_box/leica/status
