--- a/box_utils/box_recording/cfg/box_uncompressed.yaml
+++ b/box_utils/box_recording/cfg/box_uncompressed.yaml
@@ -43,6 +43,7 @@ nuc:
 opc:
   utils:
     - /gt_box/health_status/opc
+    - /gt_box/health_status/merged
   leica:
     - /gt_box/leica/position
     - /gt_box/leica/status
