--- a/box_bringup/box_launch/tmux/box_nuc.yaml
+++ b/box_bringup/box_launch/tmux/box_nuc.yaml
@@ -1,4 +1,4 @@
-session_name: box_opc
+session_name: box_nuc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,9 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.151:11311
-    - export ROS_IP=192.168.2.151
-
+    - export ROS_MASTER_URI=http://192.168.2.56:11311
+    - export ROS_IP=192.168.2.56
 
   options:
     pane-border-status: top
@@ -20,9 +19,9 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch box_launch fkie.launch
           autostart_launch_files:="
-            $(rospack find box_launch)/multi_launch/opc_calib_no.launch
+            $(rospack find box_launch)/multi_launch/box_nuc.launch
             "
-          use_gui:=true
+          use_gui:=false
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
