--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "box_drivers/ros2_v4l2_camera"]
 	path = box_drivers/ros2_v4l2_camera
 	url = git@github.com:leggedrobotics/ros2_v4l2_camera.git
+[submodule "box_drivers/rasp-camera-trigger"]
+	path = box_drivers/rasp-camera-trigger
+	url = git@github.com:leggedrobotics/rasp-camera-trigger.git
