--- a/box_utils/box_health/cfg/health_check_topics.yaml
+++ b/box_utils/box_health/cfg/health_check_topics.yaml
@@ -1,5 +1,7 @@
 # topics listed here also have to be in msg/healthStatus_{jetson, nuc}.msg
 jetson:
+  - /gt_box/alphasense_driver_node/cam0
+  - /gt_box/alphasense_driver_node/cam1
   - /gt_box/alphasense_driver_node/cam3
   - /gt_box/alphasense_driver_node/cam4
   - /gt_box/alphasense_driver_node/cam5
@@ -10,7 +12,6 @@ jetson:
   - /gt_box/alphasense_driver_node/imu
   - /gt_box/rover/piksi/position_receiver_0/ros/pos_enu
 nuc:
-  - /gt_box/adis16475
   - /gt_box/v4l2_camera_left/image_raw
   - /gt_box/v4l2_camera_middle/image_raw
   - /gt_box/v4l2_camera_right/image_raw
