--- a/box_bringup/box_launch/package.xml
+++ b/box_bringup/box_launch/package.xml
@@ -17,11 +17,7 @@
   <depend>bringup_gps</depend>
   <depend>bringup_adis16475</depend>
   <depend>bringup_stim320</depend>
-  <exec_depend>fkie_multimaster_msgs</exec_depend>
-  <exec_depend>fkie_master_discovery</exec_depend>
-  <exec_depend>fkie_master_sync</exec_depend>
-  <exec_depend>fkie_node_manager</exec_depend>
-  <exec_depend>fkie_node_manager_daemon</exec_depend>
+  <exec_depend>bringup_fkie</exec_depend>
   <depend>box_recording</depend>
   <depend>box_rviz</depend>
   <depend>box_health</depend>
