--- a/box_bringup/box_launch/tmux/box_pi.yaml
+++ b/box_bringup/box_launch/tmux/box_pi.yaml
@@ -17,7 +17,7 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source devel/setup.bash
-      - roslaunch bringup_pi fkie.launch
+      - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
             $(rospack find bringup_pi)/launch/box_pi.launch
             "
