use correct versavis imu driver

--- a/box_bringup/bringup_adis16448_versavis/package.xml
+++ b/box_bringup/bringup_adis16448_versavis/package.xml
@@ -3,9 +3,10 @@
   <name>bringup_adis16448_versavis</name>
   <version>0.0.0</version>
   <description>The bringup_adis16448_versavis package</description>
-  <maintainer email="code@lennart-werner.de">Lennart Werner</maintainer>
+  <maintainer email="bkrumme@ethz.ch">Benjamin krummenacher</maintainer>
   <license>Proprietary</license>
-  <depend>rosserial_python</depend>
+  <buildtool_depend>catkin</buildtool_depend>
+  <depend>versavis_adis16448_receiver</depend>
   <export>
   </export>
 </package>
