--- a/box_bringup/box_launch/launch/launch_pi/CMakeLists.txt
+++ b/box_bringup/box_launch/launch/launch_pi/CMakeLists.txt
@@ -9,7 +9,7 @@
 # See the License for more information.
 #=============================================================================
 cmake_minimum_required(VERSION 3.10)
-project(bringup_pi)
+project(launch_pi)
 
 #==
 # Dependencies
